chg: [intro] add links section

--- a/1-ail-introduction/ail-training.tex
+++ b/1-ail-introduction/ail-training.tex
@@ -138,7 +138,7 @@
   \end{frame}
 }
 
-\author{\Large{Alexandre Dulaunoy}\\ \scriptsize{alexandre.dulaunoy@circl.lu}\\ \large{Aurélien Thirion}\\ \scriptsize{aurelien.thirion@circl.lu}\\}
+\author{\Large{Alexandre Dulaunoy}\\ \scriptsize{alexandre.dulaunoy@circl.lu}\\ \large{Aurélien Thirion}\\ \scriptsize{aurelien.thirion@circl.lu}\\ \large{Sami Mokaddem}\\ \scriptsize{sami.mokaddem@circl.lu}\\}
 \title{AIL Framework for Analysis of Information Leaks}
 \subtitle{data mining - website and darkweb correlation}
 \institute{info@circl.lu}
@@ -150,6 +150,20 @@
 \begin{frame}[t,plain]
 \titlepage
 \end{frame}
+
+
+% LINKS
+\begin{frame}
+\frametitle{Links}
+    \begin{itemize}
+        \item AIL project: \url{https://github.com/ail-project}
+        \item AIL framework: \url{https://github.com/ail-project/ail-framework}
+        \item Slide deck: \url{https://github.com/ail-project/ail-training}
+        \item gitter: TODO
+    \end{itemize}
+\end{frame}
+
+
 \begin{frame}
         \frametitle{Privacy, AIL and GDPR}
         \begin{itemize}
@@ -167,9 +181,6 @@
 				\item Art. 6(1)(f) - Legitimate interest - Recital 49 explicitly refers to CSIRTs’ right to process personal data provided that they have a legitimate interest but not colliding with fundamental rights and freedoms of data subject.
         \end{itemize}
 \end{frame}
-
-
-
 
 \section{Objectives}
 \begin{frame}
