chg: [slide] intro with links

--- a/1-ail-introduction/ail-training.tex
+++ b/1-ail-introduction/ail-training.tex
@@ -156,10 +156,10 @@
 \begin{frame}
 \frametitle{Links}
     \begin{itemize}
-        \item AIL project: \url{https://github.com/ail-project}
-        \item AIL framework: \url{https://github.com/ail-project/ail-framework}
-        \item Slide deck: \url{https://github.com/ail-project/ail-training}
-        \item gitter: TODO
+        \item AIL project \url{https://github.com/ail-project}
+        \item AIL framework \url{https://github.com/ail-project/ail-framework}
+        \item Training materials \url{https://github.com/ail-project/ail-training}
+        \item Online chat \url{https://gitter.im/ail-project/community}
     \end{itemize}
 \end{frame}
 
