fix: [intro] change config filepath

--- a/1-ail-introduction/ail-training.tex
+++ b/1-ail-introduction/ail-training.tex
@@ -828,9 +828,9 @@ cd AIL-framework
 \begin{frame}
     \frametitle{Feeding AIL with your own data - \texttt{import\_dir.py} (2)}
     \begin{enumerate}
-        \item Check your local configuration \texttt{\large{bin/package/config.cfg}}
+        \item Check your local configuration \texttt{\large{configs/core.cfg}}
             \begin{itemize}
-                \item In the file \texttt{\large{bin/package/config.cfg}},
+                \item In the file \texttt{\large{configs/core.cfg}},
                 \item Add \texttt{127.0.0.1:5556} in \texttt{ZMQ\_Global} 
                 \item (should already be set by default)
             \end{itemize}
