chg: [title] updated

--- a/1-ail-introduction/ail-training.tex
+++ b/1-ail-introduction/ail-training.tex
@@ -140,7 +140,7 @@
 
 \author{\Large{Alexandre Dulaunoy}\\ \scriptsize{alexandre.dulaunoy@circl.lu}\\ \large{Aurelien Thirion}\\ \scriptsize{aurelien.thirion@circl.lu}\\ \large{Jean-Louis Huynen}\\ \scriptsize{jean-louis.huynen@circl.lu}\\}
 \title{AIL Framework for Analysis of Information Leaks}
-\subtitle{data mining - website and darkweb correlation}
+\subtitle{Practical and Efficient Data-Mining of Suspicious Websites, Forums and Tor Hidden-Services}
 \institute{info@circl.lu}
 \date{\today}
 
@@ -165,7 +165,7 @@
 
 
 \begin{frame}
-        \frametitle{Privacy, AIL and GDPR}
+        \frametitle{Privacy, AIL and GDPR (PII)}
         \begin{itemize}
                 \item Many modules in AIL can process personal data and even special categories of data as defined in GDPR (Art. 9).
                 \item The data controller is often the operator of the AIL framework (limited to the organisation) and has to define {\bf legal grounds for processing personal data}.
