chg: [update] based on discussions

--- a/1-ail-introduction/ail-training.tex
+++ b/1-ail-introduction/ail-training.tex
@@ -324,7 +324,7 @@ response platforms
 \end{frame}
 
 \begin{frame}[t,plain]
-    \frametitle{Examples of pastes}
+        \frametitle{Examples of pastes (items)}
     \begin{figure}
         \includegraphics[scale=0.32, angle=0]{images/pastes-ex.png}
     \end{figure}
@@ -334,10 +334,11 @@ response platforms
         \frametitle{Why so many leaks?}
         \begin{itemize}
                 \item Economical interests (e.g. Adversaries promoting services)
+                \item Ransom model (e.g. To publicly pressure the victims)
                 \item Political motives (e.g. Adversaries showing off)
                 \item Collaboration (e.g. Criminals need to collaborate)
                 \item Operational infrastructure (e.g. malware exfiltrating information on a pastie website)
-                \item Mistakes and Errors
+                \item Mistakes and errors
         \end{itemize}
 \end{frame}
 
@@ -830,7 +831,11 @@ cd AIL-framework
   "text": "text to import"
 }
 \end{tcblisting}
-    
+ 
+\end{frame}
+
+\begin{frame}[fragile]
+   \frametitle{Feeding AIL with Twitter posts and associated urls}
 \end{frame}
 
 \begin{frame}
