--- a/1-ail-introduction/ail-training.tex
+++ b/1-ail-introduction/ail-training.tex
@@ -836,6 +836,12 @@ cd AIL-framework
 
 \begin{frame}[fragile]
    \frametitle{Feeding AIL with Twitter posts and associated urls}
+        \begin{itemize}
+                \item AIL - feeder from Twitter\footnote{\url{https://github.com/ail-project/ail-feeder-twitter}}
+                \item The AIL-feeder-twitter search in Twitter using Twint (without API), crawls the urls and pushes the results in AIL
+                \item The JSON format format can be extended via meta fields
+        \end{itemize}
+
 \end{frame}
 
 \begin{frame}
@@ -859,7 +865,7 @@ cd AIL-framework
         \item Check your local configuration \texttt{\large{configs/core.cfg}}
             \begin{itemize}
                 \item In the file \texttt{\large{configs/core.cfg}},
-                \item Add \texttt{127.0.0.1:5556} in \texttt{ZMQ\_Global} 
+                \item Add \texttt{127.0.0.1:5556} in \texttt{ZMQ\_Global}
                 \item (should already be set by default)
             \end{itemize}
 %        \pause
