chg: [introduction] protocols added

--- a/0-darknet-monitoring-introduction/ail-training.tex
+++ b/0-darknet-monitoring-introduction/ail-training.tex
@@ -211,7 +211,7 @@
 \begin{frame}
 \frametitle{Our objectives}
     \begin{itemize}
-        \item Provide a quick overview to darknet, deepweb, collection and cyber threat intelligence lifecycle;
+        \item Provide a quick overview to darknet, deep web, collection and cyber threat intelligence lifecycle;
         \item Review different {\bf collection mechanisms} and {\bf sources};
         \item Some practical examples of criminal activities and their use of modern technologies;
         \item Show the benefits of developing open source tools to monitor web pages, pastes, forums and hidden services;
@@ -221,15 +221,24 @@
 
 \section{Introduction}
 \begin{frame}
-        \frametitle{Concepts}
+        \frametitle{Concepts - Deep Web}
         \begin{itemize}
                 \item {\bf Deep Web} is the part of World Wide Web not indexed or directly accessible by standard web search-engines;
                 \item This can be content hidden from {\bf crawlers} by requiring a specific access and this can includes private social media, password-protected forums or content protected
                         by different measures such as paywalls or specific security interface to access the information;
                 \item A large portion of content accessible via Internet is part of the deep web\footnote{also called invisible web, hidden web or non-indexed web}.
         \end{itemize}
-
 \end{frame}
+
+\begin{frame}
+        \frametitle{Concepts - darknet}
+        \begin{itemize}
+                \item {\bf Darknet} is an overlay network running on top of Internet requiring specific software to access the network and its services;
+                \item Tor, I2P and Freenet are the most commonly used ones. Many are used for hidden services access and some for proxy access to the Internet;
+                \item There are legitimate use-cases for such network but also many illegal uses.
+        \end{itemize}
+\end{frame}
+
 
 \end{document}
 
