new: [training] adding slide about the sources

--- a/0-darknet-monitoring-introduction/ail-training.tex
+++ b/0-darknet-monitoring-introduction/ail-training.tex
@@ -235,8 +235,22 @@
         \begin{itemize}
                 \item {\bf Darknet} is an overlay network running on top of Internet requiring specific software to access the network and its services;
                 \item Tor, I2P and Freenet are the most commonly used ones. Many are used for hidden services access and some for proxy access to the Internet;
-                \item There are legitimate use-cases for such network but also many illegal uses.
+		\item There are {\bf legitimate use-cases} for such network but also many {\bf illegal or criminal usage}.
         \end{itemize}
+\end{frame}
+
+\begin{frame}
+	\frametitle{Collection and Sources}
+	\begin{itemize}
+		\item Collection (mainly OSINT\footnote{public or open source sources} or covert/clandestine sources) is the act of gathering manually or automatically data from different sources;
+		\item {\bf Determining and maintaining the sources}:
+		\begin{itemize}
+			\item Hidden services (on Tor) such as forums, market places, chatrooms, public site\footnote{\url{https://github.com/ail-project/ail-splash-manager}}...
+			\item Social network (e.g. Twitter) from Twitter\footnote{\url{https://github.com/ail-project/ail-feeder-twitter}} to Instagram.
+			\item Chat and discussion forum from Discord, Telegram\footnote{\url{https://github.com/ail-project/ail-feeder-telegram}} and private hidden one on Tor or other overlay networks.
+			\item News and security reports\footnote{\url{https://github.com/ail-project/ail-feeder-atom-rss}}.
+		\end{itemize}
+	\end{itemize}
 \end{frame}
 
 
