--- a/0-darknet-monitoring-introduction/ail-training.tex
+++ b/0-darknet-monitoring-introduction/ail-training.tex
@@ -275,6 +275,29 @@
 \end{frame}
 
 \begin{frame}
+        \frametitle{Collecting, processing and analysing content - web pages}
+        \begin{itemize}
+		\item Building a search engine on the web is a challenging task because:
+        	\begin{itemize}
+			\item it has to crawl webpages,
+			\item it has to to make sense of {\bf unstructured data},
+			\item it has to {\bf index} these data,
+			\item it has to provide a way to retrieve data and structure data (e.g. correlation).
+        	\end{itemize}
+		\item Doing so on Tor is even more challenging because:
+
+        	\begin{itemize}
+			\item services don't always want to be found,
+			\item parts of the dataset have to be discarded.
+        	\end{itemize}
+	\item in each case, it requires a lot of bandwidth, storage and computing power.
+        \end{itemize}
+\end{frame}
+
+\section{Demo of analysed content}
+
+\section{Tor - a detailed overview of an overlay network}
+\begin{frame}
         \frametitle{Concepts - tor}
         \begin{itemize}
 		\item tor makes use of {\bf onion routing} to obfuscate user identify,
@@ -306,26 +329,6 @@
 		\item these can be provided through NATs,
 		\item these can be moved easily.
         	\end{itemize}
-        \end{itemize}
-\end{frame}
-
-\begin{frame}
-        \frametitle{Concepts - search engines}
-        \begin{itemize}
-		\item Building a search engine on the web is a challenging task because:
-        	\begin{itemize}
-			\item it has to crawl webpages,
-			\item it has to to make sense of unstructured data,
-			\item it has to index these data,
-			\item it has to provide a way to retrieve data.
-        	\end{itemize}
-		\item Doing so on tor is even more challenging because:
-
-        	\begin{itemize}
-			\item services don't always want to be found,
-			\item parts of the dataset have to be discarded.
-        	\end{itemize}
-	\item in each case, it requires a lot of bandwidth, storage and computing power.
         \end{itemize}
 \end{frame}
 
