--- a/0-darknet-monitoring-introduction/ail-training.tex
+++ b/0-darknet-monitoring-introduction/ail-training.tex
@@ -255,6 +255,7 @@
 
 \begin{frame}
 	\frametitle{Lifecycle of collection and analysis}
+	\center
 \tikzstyle{startstop} = [rectangle, rounded corners, minimum width=3cm, minimum height=0.8cm,text centered, draw=black, fill=red!30]
 \tikzstyle{io} = [trapezium, trapezium left angle=70, trapezium right angle=110, minimum width=3cm, minimum height=1cm, text centered, draw=black, fill=blue!30]
 \tikzstyle{arrow} = [thick,->,>=stealth]
