chg: [typo] fixed

--- a/0-darknet-monitoring-introduction/ail-training.tex
+++ b/0-darknet-monitoring-introduction/ail-training.tex
@@ -299,7 +299,7 @@
 
 \section{Tor - a detailed overview of an overlay network}
 \begin{frame}
-        \frametitle{Concepts - tor\footnote{licence: Bits of Freedom CC BY-SA 3.0}}
+        \frametitle{Concepts - tor\footnote{license: Bits of Freedom CC BY-SA 3.0}}
         \begin{itemize}
 		\item tor makes use of {\bf onion routing} to obfuscate user identify,
         \end{itemize}
@@ -308,12 +308,12 @@
 
 
 \begin{frame}
-        \frametitle{Concepts - tor\footnote{licence: Harrison Neal CC BY-SA 3.0}}
+        \frametitle{Concepts - tor\footnote{license: Harrison Neal CC BY-SA 3.0}}
 	\includegraphics[scale=0.3]{images/tor2.png}
 \end{frame}
 
 \begin{frame}
-        \frametitle{Concepts - tor\footnote{licence: Roger Dingledine, Nick Mathewson, Paul Syverson CC BY 3.0}}
+        \frametitle{Concepts - tor\footnote{license: Roger Dingledine, Nick Mathewson, Paul Syverson CC BY 3.0}}
 	\includegraphics[scale=0.3]{images/tor3.png}
 \end{frame}
 
