chg: [0] structured data, crypto evidences

--- a/0-darknet-monitoring-introduction/ail-training.tex
+++ b/0-darknet-monitoring-introduction/ail-training.tex
@@ -295,6 +295,32 @@
         \end{itemize}
 \end{frame}
 
+
+\begin{frame}
+        \frametitle{Collecting, processing and analysing content - structured data}
+        \begin{itemize}
+		\item Some data are structured and are easy to process:
+        	\begin{itemize}
+			\item metadata!
+			\item API responses.
+        	\end{itemize}
+		\item Some even provide cryptographic evidences:
+			        \begin{itemize}
+
+         \item authentication mechanisms between peers,
+         \item openGPG can leak a lot of metadata
+        \begin{itemize}
+          \item key ids,
+          \item subject of email in thunderbird,
+        \end{itemize}
+          \item Bitcoin's Blockchain is public,
+          \item pivoting on these data with external sources yields interesting results.
+        \end{itemize}
+
+
+        \end{itemize}
+\end{frame}
+
 \section{Demo of analysed content}
 
 \section{Tor - a detailed overview of an overlay network}
