chg: [0] Large large

--- a/0-darknet-monitoring-introduction/ail-training.tex
+++ b/0-darknet-monitoring-introduction/ail-training.tex
@@ -138,7 +138,7 @@
   \end{frame}
 }
 
-\author{\Large{Alexandre Dulaunoy}\\ \scriptsize{alexandre.dulaunoy@circl.lu}\\ \large{Aurelien Thirion}\\ \scriptsize{aurelien.thirion@circl.lu}\\ \large{Jean-Louis Huynen}\\ \scriptsize{jean-louis.huynen@circl.lu}\\}
+\author{\large{Alexandre Dulaunoy}\\ \scriptsize{alexandre.dulaunoy@circl.lu}\\ \large{Aurelien Thirion}\\ \scriptsize{aurelien.thirion@circl.lu}\\ \large{Jean-Louis Huynen}\\ \scriptsize{jean-louis.huynen@circl.lu}\\}
 \title{Darknet and Social Network Monitoring}
 \subtitle{Introduction to Challenges, Concepts and Data Mining of the Deep Web}
 \institute{info@circl.lu}
