chg: [doc] investigations

--- a/0-darknet-monitoring-introduction/ail-training.tex
+++ b/0-darknet-monitoring-introduction/ail-training.tex
@@ -321,6 +321,21 @@
         \end{itemize}
 \end{frame}
 
+\begin{frame}
+        \frametitle{Analysing contents - Investigations}
+        \begin{itemize}
+		\item Building a collection of {\bf labelled} objects
+        	\begin{itemize}
+        	\item fully compatible with MISP events, taxonomies and galaxies,
+        	\item regroup proccessed objects for further analysis,
+			\item keep track of analyzed objects,
+			\item analysts collaboration,
+        	\end{itemize}
+        	
+		\item Export and share via MISP.
+        \end{itemize}
+\end{frame}
+
 \section{Demo of analysed content}
 
 \section{Tor - a detailed overview of an overlay network}
